fluent-syntax/test/fixtures_behavior/variant_with_empty_pattern.ftl
key1 = {
    *[one] {""}
    }

err1 = {
    *[one]
    }
//~ ERROR E0006, pos 51, args "value"
